<resources>
    <string name="app_name">ReMart</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="Username">Username</string>
    <string name="Num">Phone Number</string>
    <string name="minimum_password">Password was too short, please enter a minimum of 6 characters!</string>
    <string name="auth_failed">Login failed, check your credentials or sign up today!</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password to reset your email address</string>
    <string name="remove_user">Remove user</string>
    <string name="new_password">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Full Name</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Register now!</string>
    <string name="btn_link_to_login">Already registered. Login Here!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="prompt_password">What is your password?</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="forgot_password_msg">We need your registered Email address to send you your password reset instructions.</string>
    <string name="admin_uid">96IrJp5wPzcxv8Uz0FLjegjYqdf2</string>
    <string name="Explore">Explore</string>
    <string name="Sell">Sell</string>
    <string name="Me">Account</string>
</resources>
